--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ serde_json = "1"
 actix-web = "4"
 rand = "0"
 env_logger = "0.11.3"
+deadpool-postgres = "0.14.0"
+tokio-postgres = "0.7.10"
+log = "0.4.22"
