--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sukab-restaurant"
 version = "0.1.0"
 edition = "2021"
+default-run = "sukab-restaurant"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -17,3 +18,6 @@ time = "0.3.36"
 postgres-types = { version = "0.2.6", features = ["derive"] }
 postgres-from-row = "0.5.2"
 mockall = "0.12.1"
+
+[[bin]]
+name = "client"
